# health-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  locustfile.py  mypy.ini  pyproject.toml  requirements.txt  test2.py
alembic/: env.py
alembic/versions/: 04256136803e_users_goals.py  0d03f75e1861_initial_migration.py  0f37a64e3229_changed_water_to_float.py  109fd322ab78_change_telegram_id_to_biginteger.py  2d57160427e1_init.py  30cd37f3683f_add_updated_at_column_with_default.py  441c4305a262_create_health_data_table.py  48c757f6f844_users_goals_fix.py  4bb249c04124_testing_new_models.py  68ecff2f281d_telegram_id_add.py  6f39f71db803_change_models_user_and_others.py  7bff9c468956_users_goals_fix.py  8f41a080fe39_changed_water.py  920875b574ee_initial_migration.py  acc41a100491_telegram_id_add.py  c09f0aea00d1_actual_models.py
app/: auth.py  bot.py  celery.py  database.py  main.py  schemas.py  session.py  tasks.py  verify.py
app/models/: __init__.py  health.py  models.py  nutrition.py  sleep.py  user.py  user_goals.py
app/routers/: auth.py  health.py  nutrition.py  sleep.py  user.py
app/schemas/: health.py  nutrition.py  sleep.py  user.py
app/tasks/: reset.py
bot/: config.py  dispatcher.py  handlers.py  helpers.py  main.py  utils.py
