[project]
name = "health-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "L1inkoln"}
]
readme = "README.md"
python = "^3.13"
dependencies = [
    "aiogram (>=3.19.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
